# flask-template

./: .gitignore  README.md  alembic.ini  pyproject.toml  ruff.toml
config/: local.dist.ini
src/app/: __main__.py
src/app/application/common/: exceptions.py  usecases.py
src/app/application/user/: dto.py  exceptions.py  interfaces.py
src/app/application/user/usecases/: __init__.py  create.py  list.py
src/app/controllers/: base.py  errors.py  user.py  users.py
src/app/database/migrations/: env.py
src/app/database/models/: base.py  user.py
src/app/infrastructure/: __init__.py
src/app/infrastructure/config/: __init__.py  models.py  parsers.py
src/app/infrastructure/database/: converters.py  exception_mapper.py  session.py
src/app/infrastructure/database/migrations/: env.py
src/app/infrastructure/database/migrations/versions/: 61df7498c4ef_add_users_table.py
src/app/infrastructure/database/models/: __init__.py
src/app/infrastructure/log/: __init__.py  formatters.py  main.py
src/app/models/: __init__.py
src/app/persistence/: base.py
src/app/persistence/gateways/: __init__.py  base.py  user.py
src/app/presentation/: __main__.py
src/app/presentation/middlewares/: __init__.py  adaptix.py  database.py
src/app/presentation/routes/: __init__.py  user.py
src/app/routes/: user.py
src/app/schemas/: user.py
tests/: conftest.py  factory.py
tests/api/: test_user.py
