[tool.poetry]
name = "flask-template"
version = "0.1.0"
description = "Flask project boilerplate"
authors = ["hrimov <andrew.hrimov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
psycopg = "^3.1.12"
alembic = "^1.12.1"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
